--- a/index.css
+++ b/index.css
@@ -26,5 +26,6 @@ button {
     font-weight: bold;
     border: none;
     border-radius: 2px;
-    margin: 5px;
+    margin-bottom: 2px;
+    margin-top: 2px;
 }
